--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
-{ "token"  : "YOUR_BOT_TOKEN",
-    "prefix" : "YOUR_BOT_PREFIX"
+{ "token"  : "MTE3MjQwNzc0NjE0MjkzNzE5OA.GMlAbp.DfWUqMOLzdyBdMV6RPrc9NAYd89wRvT11rlAJg",
+    "prefix" : ","
   }
