--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
-{ "token"  : "MTE3MjQwNzc0NjE0MjkzNzE5OA.GMlAbp.DfWUqMOLzdyBdMV6RPrc9NAYd89wRvT11rlAJg",
-    "prefix" : ","
+{ "token"  : "MTE3MjQwNzc0NjE0MjkzNzE5OA.GP4En1.HdWQpxJ8JyGEUUxIRUpKI4FrqXUQ417InOLj6o",
+    "prefix" : "+"
   }
